fix: spacing in category column of bank transactions (#189)

--- a/src/styles/bank_transactions.scss
+++ b/src/styles/bank_transactions.scss
@@ -150,7 +150,7 @@
   flex: 1;
   color: var(--text-color-primary);
   white-space: nowrap;
-  max-width: 350px;
+  padding-left: 10px;
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-flex;
