--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -504,10 +504,6 @@
   margin-left: -30px;
 }
 
-.Layer__category-menu {
-  width: 17rem;
-}
-
 .Layer__category-menu.Layer__category-menu--full {
   width: 100%;
   max-width: 100%;
